# xen

./: .build.bat.un~  .gitignore  CMakeLists.txt  LICENSE.txt  build.bat  build.bat~  build.sh  build_tests.bat  format.sh  input_sys.h  kv.c  main.c  makefile  run  run_tests.bat
assets/models/cyborg/: cyborg.mtl
assets/models/test_room/: test_obj.mtl  test_room.blend  test_room.mtl
assets/models/ucube/: ucube.mtl
assets/shaders/: .cube_uber.frag.un~  basic.frag  basic.vert  cube_uber.frag  cube_uber.frag~  cube_uber.vert  ubershader.frag  ubershader.vert
assets/test/: test_obj.blend
demo/: demo.c
ecs/: CMakeLists.txt  entity_system.c  entity_system.h
ecs/tests/: entity_system_tests.c
example/: CMakeLists.txt  main.c
game/: cube.c
include/: .gltestinl.h.swp  .gltestinl.h.un~  .xen.h.swp  .xen.h.un~  3dmath.h  cbuff.h  gltestinl.h  gltestinl.h~  lm.h  logger.h  material.h  mesh.h  model.h  resources.h  ring_buffer.h  shader.h  testing.h  texture.h  vec.h  vertex.h  xen.h  xen.h~
lib/glad/: CMakeLists.txt
src/: camera  camera.c  camera.h  cbuff.c  cube.c  game.c  glad.c  graphics.c  graphics.h  input.c  input.h  input_sys.c  input_sys.h  lm.h  logger.c  logger.h  maths.h  mesh.c  mesh.h  player.c  player.h  resources.c  resources.h  shader.c  shader.h  testing.h  types.h  window.c  window.h  xen.c  xen.h
test/: CMakeLists.txt  logger_tests.c  resources_tests.c  vec_tests.c
tests/: .cbuff_tests.c.un~  build_tests.bat  cbuff_tests.c  input_sys_tests.c  lm_tests  lm_tests.c  makefile  maths_tests.c  model_tests.c  resources_tests.c  ring_buffer_tests.c  vec_tests  vec_tests.c
tests/data/: aio.txt
